# pager-cli

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main  test_main  test_main[1]_include.cmake  test_main[1]_tests.cmake  todo.md
.github/workflows/: ci.yaml
src/: main.cpp  server.cpp  server.h
tests/: test_main.cpp
